fixed text wrapping in home page

--- a/frontend/src/styles/GlobalStyles.css
+++ b/frontend/src/styles/GlobalStyles.css
@@ -181,6 +181,8 @@ video {
   font-weight: 400;
   margin-top: 0px;
   margin-bottom: 0px;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 @media (min-width: 992px) {
